<resources>
    <string name="app_name">Calculator x Dice</string>
    <string name="dice">DICE</string>
    <string name="calculator">CALCULATOR</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_history">No History</string>
    <string name="history_cleared">History Cleared</string>
    <string name="memory_clear">MC</string>
    <string name="memory_recall">MR</string>
    <string name="memory_add">M+</string>
    <string name="memory_subtract">M-</string>
    <string name="memory_store">MS</string>

    <string name="c">C</string>
    <string name="equal">=</string>
    <string name="percentage">%</string>
    <string name="root">√</string>
    <string name="square">x²</string>
    <string name="fraction">⅟x</string>
    <string name="ce">CE</string>
    <string name="backspace">⌫</string>
    <string name="division">÷</string>
    <string name="plus_minus">±</string>
    <string name="comma">,</string>
    <string name="addition">+</string>
    <string name="subtraction">−</string>
    <string name="multiplication">×</string>

    <string name="value_9">9</string>
    <string name="value_8">8</string>
    <string name="value_7">7</string>
    <string name="value_6">6</string>
    <string name="value_5">5</string>
    <string name="value_4">4</string>
    <string name="value_3">3</string>
    <string name="value_2">2</string>
    <string name="value_1">1</string>
    <string name="value_0">0</string>

    <string name="menu_item_history">History</string>

    <string name="history">History: </string>
    <string name="clear_history">Clear history</string>
    <string name="history_result">"History result: "</string>

    <string name="memory_cleared_toast">Memory cleared</string>
    <string name="memory_recalled_toast">Memory recalled</string>
    <string name="memory_added_toast">"Memory added: "</string>
    <string name="memory_subtracted_toast">"Memory subtracted: "</string>
    <string name="memory_stored_toast">"Memory stored: "</string>
    <string name="calculator_history_label">Calculator History</string>

</resources>