<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".calculator.CalculatorActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="5"
        android:paddingBottom="0dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:rowCount="1"

        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.5">

        <android.widget.Button
            android:id="@+id/bt_memory_clear"
            style="@style/CalculatorMemoryButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/memory_clear" />

        <android.widget.Button
            android:id="@+id/bt_memory_reload"
            style="@style/CalculatorMemoryButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/memory_recall" />

        <android.widget.Button
            android:id="@+id/bt_memory_add"
            style="@style/CalculatorMemoryButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/memory_add" />

        <android.widget.Button
            android:id="@+id/bt_memory_substract"
            style="@style/CalculatorMemoryButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/memory_subtract" />

        <android.widget.Button
            android:id="@+id/bt_memory_store"
            style="@style/CalculatorMemoryButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/memory_store" />

    </GridLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="4"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="0dp"
        android:rowCount="6"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.5">

        <android.widget.Button
            android:id="@+id/bt_percentage"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/percentage" />

        <android.widget.Button
            android:id="@+id/bt_root"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/root" />

        <android.widget.Button
            android:id="@+id/bt_square"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/square"
            android:textAllCaps="false" />

        <android.widget.Button
            android:id="@+id/bt_fraction"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/fraction"
            android:textAllCaps="false" />

        <android.widget.Button
            android:id="@+id/bt_clearEntry"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/ce" />

        <android.widget.Button
            android:id="@+id/bt_clear"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/c" />

        <android.widget.Button
            android:id="@+id/bt_backspace"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/backspace" />

        <android.widget.Button
            android:id="@+id/bt_division"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/division" />

        <android.widget.Button
            android:id="@+id/bt_seven"
            style="@style/CalculatorNumberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/value_7" />

        <android.widget.Button
            android:id="@+id/bt_eight"
            style="@style/CalculatorNumberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/value_8" />

        <android.widget.Button
            android:id="@+id/bt_nine"
            style="@style/CalculatorNumberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/value_9" />

        <android.widget.Button
            android:id="@+id/bt_multiplication"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/multiplication" />

        <android.widget.Button
            android:id="@+id/bt_four"
            style="@style/CalculatorNumberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/value_4" />

        <android.widget.Button
            android:id="@+id/bt_five"
            style="@style/CalculatorNumberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/value_5" />

        <android.widget.Button
            android:id="@+id/bt_six"
            style="@style/CalculatorNumberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/value_6" />

        <android.widget.Button
            android:id="@+id/bt_subtraction"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/subtraction" />

        <android.widget.Button
            android:id="@+id/bt_one"
            style="@style/CalculatorNumberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/value_1" />

        <android.widget.Button
            android:id="@+id/bt_two"
            style="@style/CalculatorNumberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/value_2" />

        <android.widget.Button
            android:id="@+id/bt_three"
            style="@style/CalculatorNumberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/value_3" />

        <android.widget.Button
            android:id="@+id/bt_addition"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/addition" />

        <android.widget.Button
            android:id="@+id/bt_plusMinus"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:text="@string/plus_minus" />

        <android.widget.Button
            android:id="@+id/bt_zero"
            style="@style/CalculatorNumberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:text="@string/value_0" />

        <android.widget.Button
            android:id="@+id/bt_comma"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:text="@string/comma" />

        <android.widget.Button
            android:id="@+id/bt_equal"
            style="@style/CalculatorActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:text="@string/equal" />

    </GridLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/tv_historyNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="bottom|end"
            android:textAppearance="@android:style/TextAppearance.Medium"
            tools:textView="9 + 2 - 1 × " />

        <TextView
            android:id="@+id/tv_currentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="end"
            android:text="@string/value_0"
            android:textAlignment="gravity"
            app:autoSizeTextType="uniform"
            tools:textView="10" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>